# dolls_studio

./: .gitignore  CMakeLists.txt  README.md  gridlayoutpage.cpp  gridlayoutpage.h  header.cpp  header.h  listboxpage.cpp  listboxpage.h  main.cpp  mainheader.cpp  mainheader.h  mainview.cpp  mainview.h  menufilebutton.cpp  menufilebutton.h  page.cpp  page.h  sysdialog.h  sysdlgs.cpp  sysdlgs.h  tabview.cpp  tabview.h  vtkitem.cpp  vtkitem.h
f3d/: animationManager.cxx  animationManager.h  camera.h  context.h  engine.cpp  engine.h  export.h  factory.cxx  image.h  log.h  options.cxx  options.h  options_generated.h  plugin.cxx  plugin_export.h  reader_FBX.h  scene.h  scene_impl.cxx  scene_impl.h  types.h  utils.h  window.h  window_impl.cxx  window_impl.h
f3d/vtk/: vtkF3DBitonicSort.h  vtkF3DImporter.h  vtkF3DRenderer.cxx  vtkF3DRenderer.h
f3d/vtkF3D/: vtkF3DAssimpImporter.h
tmp/: CMakeLists.txt  MenuButton.cpp  MenuButton.h  assimpimporter.cpp  assimpimporter.h  manager.cpp  manager.h  sysdlgs.cpp  sysdlgs.h  vtkitem.cpp  vtkitem.h
tmp/f_3d/: vtkF3DAssimpImporter.cxx  vtkextAssimpModule.h  vtkextModule.h
tmp/tmp/: CMakeLists.txt  README.md  app.cpp  app.h  engine.cpp  engine.h  f3d_assimp_importer.cpp  f3d_assimp_importer.h  main.cpp  main.qml  mainheader.cpp  mainheader.h  mainview.cpp  mainview.h  manager.cpp  manager.h  project.cpp  project.h  settings.cpp  settings.h  timercallback.cpp  timercallback.h  vtkitem.cpp  vtkitem.h
